hotels slider fixing alignments as mock-up

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,11 @@
 page-home {
-
+	.menu-header{
+		text-align:center;
+		font-size:initial;
+	}
+	.list-ios, .list-md{
+		margin:0;
+	}
 }
 
 .map-page #map{
