--- a/src/pages/hotelslider/hotelslider.scss
+++ b/src/pages/hotelslider/hotelslider.scss
@@ -2,7 +2,7 @@ page-hotelslider {
 
 	$contact-card-slides-height: 45%;
 	$white: #FFFFFF;
-	$black: rgba(#000000, .8);
+	$black: rgba(#000000, .4);
 	$black-a: lighten($black, 10%);
 	$orange: #F39941;
 
@@ -34,6 +34,22 @@ page-hotelslider {
 		height:100%;
 		background-size:100%;
 		background-repeat:no-repeat;
+		position:relative;
+	}
+	.SliderBlackOverlay{
+		background-color:$black;
+		width:100%;
+		height:100%;
+		background-size:100%;
+		background-repeat:no-repeat;
+		position: absolute;
+	}
+	.sliderContent{
+		position: absolute;
+	    top: 0;
+	    width: 100%;
+    	height: 100%;
+
 	}
 	.masters{
 		background:transparent;
@@ -71,15 +87,20 @@ page-hotelslider {
 	    vertical-align:middle;	    
 	}
 	.HotelCategory{
-		padding: 10px 8px;
-		width: 59%;		
+		padding: 10px 8px 10px 3px;
+		width: 64%;		
 	}
 	.hotel-category-child{
 		background-color: #F39941;
 		font-size:2.2vmax;
+		display: inline-block;
+	    width: 40%;
+	    height: 120%;
+	    text-align: center;
+	    padding: 2.5px 0;
 	}
 	.HotelFare{
-		width: 39%;
+		width: 32%;
 		padding: 10px 0;
 	}
 	.HotelMinCost{
@@ -87,6 +108,9 @@ page-hotelslider {
 		color:#fff;
 		font-weight:bold;
 		font-size:2.2vmax;
+		height: 120%;
+	    text-align: center;
+	    padding: 2.5px 0;
 	}
 
 	.HotelBlank,.hourcost-bottom{
@@ -95,18 +119,21 @@ page-hotelslider {
 	.HotelHourCost
 	{
 		height:21%;
-		background-color:#1E2128;
+		//background-color:#1E2128;
 	}
 		
 	.HotelBlank{
-		width:68.2%;
+		width:65.2%;
 	}
 	.hourcost-bottom{
-		width:30%;
+		width:32%;
 		height:100%;
 		background-color:$orange;
 		color:$white;
 		padding: 5px 5px;
+		font-size: 2.7vmax;
+    	font-weight: bold;
+    	float:right;
 	}
 
 }
